tests/samples/expression-invalid-3/template.blate
// error: 4.25.8
        {(na9me_.a().pm["[]"][mop]["mop'op"].mm(4.25.8,'oplm').tty + 9  + (mmo[lm])){}}
